<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewTracksignal"
        android:src="@drawable/tracksignal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracksignal_name"
            android:id="@+id/textViewTrackSignal" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward_name"
            android:id="@+id/toggleButtonTracksignal"
            android:checked="false"
            android:textOn="@string/forward_name"
            android:textOff="@string/backward_name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_name"
                android:id="@+id/textViewSpeed" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarSpeed"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="127"
                android:progress="124"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>